@@ -216,7 +216,10 @@ exports.isRejected = isRejected;
 function isRejected(object) {
     if (object === undefined || object === null)
         return false;
-    return object.valueOf() instanceof reject;
+    object = object.valueOf();
+    if (object === undefined || object === null)
+        return false;
+    return !!object.promiseRejected;
 }
 
 /**
@@ -234,6 +237,7 @@ function reject(reason) {
         return resolved(reject(reason));
     }, function valueOf() {
         var rejection = create(reject.prototype);
+        rejection.promiseRejected = true;
         rejection.reason = reason;
         return rejection;
     });
@@ -472,6 +476,7 @@ function forward(promise, op, resolved /* ... */) {
         try {
             promise[DUCK].apply(promise, args);
         } catch (exception) {
+            console !== "undefined" && console.error(exception);
             resolved(reject(exception));
         }
     });
